--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Unser Jahr</title>
+  <title>m&m's calendar</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="container">
-  <h1>Unser Auslandsjahr ❤️</h1>
+  <div id="caption">x</div>
 
   <div class="dates">
     <div>
