Add viewport meta tag to index.html

--- a/counters/index.html
+++ b/counters/index.html
@@ -2,8 +2,8 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
-  <meta name="referrer" content="no-referrer">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!--<meta name="referrer" content="no-referrer"> -->
   <title>Progress</title>
   <link rel="stylesheet" href="style.css">
 </head>
