Refactor date display and progress text layout

--- a/counters/index.html
+++ b/counters/index.html
@@ -13,24 +13,27 @@
   <h1 id="caption">caption</h1>
 
   <div class="dates">
-    <div><span>start </span><strong id="startDate"></strong></div>
-    <div><span>heute </span><strong id="todayDate"></strong></div>
-    <div><span>ende </span><strong id="endDate"></strong></div>
+    <div><span>start<br></span><strong id="startDate"></strong></div>
+    <div><span>heute<br></span><strong id="todayDate"></strong></div>
+    <div><span>ende<br></span><strong id="endDate"></strong></div>
   </div>
+
+  <div id="progressText"></div>
 
   <div class="progress-bar">
     <div class="progress" id="progress"></div>
   </div>
-  <div id="progressText"></div>
 
   <div class="stats">
     <div><strong id="daysPassed"></strong><span><br>geschafft</span></div>
     <div><strong id="daysLeft"></strong><span><br>übrig</span></div>
     <div><strong id="daysTotal"></strong><span><br>gesamt</span></div>
   </div>
+
   <div class="buttons">
     <button id="addEntry">➕</button>
   </div>
+
   <div id="formOverlay" class="hidden">
     <div class="form">
       <h3>neuer counter</h3>
