Add share button to index.html

--- a/counters/index.html
+++ b/counters/index.html
@@ -32,6 +32,7 @@
 
   <div class="buttons">
     <button id="addEntry">➕</button>
+    <button id="shareBtn">📤</button>
   </div>
 
   <div id="formOverlay" class="hidden">
