--- a/counters/index.html
+++ b/counters/index.html
@@ -49,7 +49,7 @@
     </div>
   </div>
 </div>
-
+<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script> 
 <script type="module" src="script.js"></script>
 </body>
 </html>
