--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script> 
 <script type="module">
-  import { db } from "../firebasedata.js";
+  import { db } from "./firebasedata.js";
   import { ref, get, set }
   from "https://www.gstatic.com/firebasejs/10.3.0/firebase-database.js";
 
